# navatala_gpu

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  NOTICE  README.md  SECURITY.md  sbom.spdx.json
benchmarks/: CMakeLists.txt  README.md  rocm_vendor_benchmark.hip
benchmarks/fixtures/: metal_validation.sample.json  rocm_vendor_benchmark.sample.json  rocm_vendor_benchmark_mi300x_20260619.json  rocm_vendor_benchmark_mi300x_20260622_rocm724.json  rocm_vendor_benchmark_mi300x_20260623_rocm724_mfma.json  rocm_vendor_benchmark_mi300x_20260623_rocm724_mfma_portable_f16.json
benchmarks/fixtures/hardware_runs/20260623_mi300x_cta128/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md  rocprof_kernel_stats.csv  rocprof_pmc_counters.csv
benchmarks/fixtures/hardware_runs/20260623_mi300x_cta128_evidence/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md
benchmarks/fixtures/hardware_runs/20260623_mi300x_cta64_direct/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md  rocprof_kernel_stats.csv  rocprof_kernel_trace.csv  rocprof_scratch_memory_stats.csv  rocprof_scratch_memory_trace.csv
benchmarks/fixtures/hardware_runs/20260623_mi300x_wrapper_byvalue/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md
benchmarks/fixtures/hardware_runs/20260623_mi300x_wrapper_full_fastpath_30iter/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md
benchmarks/fixtures/hardware_runs/20260624_mi300x_broad_mfma_hipsparselt/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md
benchmarks/fixtures/hardware_runs/20260624_mi300x_broad_v2spmv_mfma_hipsparselt/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md
benchmarks/fixtures/hardware_runs/20260624_mi300x_broad_wrapper_mfma_hipsparselt/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md
benchmarks/fixtures/hardware_runs/20260624_mi300x_cta128_edge_wrapper/: rocm_vendor_benchmark.json  rocm_vendor_benchmark.md
examples/: CMakeLists.txt  README.md  axpy_example.cpp  registry_lookup_example.cpp  wrapper_axpy_example.cpp  wrapper_spmv_example.cpp
python/: CMakeLists.txt  LICENSE  NOTICE  README.md  SECURITY.md  api_manifest.schema.json  pyproject.toml  release_metadata.json
python/bindings/: CMakeLists.txt  navatala_gpu_ext.cpp  navatala_gpu_ext.pyi  runtime_helpers.hpp
python/docs/: conf.py  index.rst
python/docs/api/: cfd.rst  dataframe.rst  graph.rst  index.rst  kernels.rst  linalg.rst  ml.rst  sparse.rst
python/navatala_gpu/: __init__.py  _core.py  _exceptions.py  _meta.py  api_manifest.json  cfd.py  dataframe.py  graph.py  kernels.py  linalg.py  ml.py  runtime.py  sparse.py
python/runtime/: CMakeLists.txt
python/runtime/cmake/: gpu_runtime_config.cmake.in  gpu_runtime_exports.map
python/runtime/include/: device_buffer.h  gpu_library_ops.h  gpu_runtime.h  memory_resource.h
python/runtime/include/dlpack/: README.md  (+1 more)
python/runtime/src/: backend_hip.cpp  backend_metal.mm  backend_opencl.cpp  gpu_library_hip_blas.cpp  navatala_ffi_real.cpp  navatala_ffi_stub.cpp  navatala_neural_operators.cpp  program_cache.cpp  resource_adaptors.cpp  runtime_profile.cpp  stream_pool.cpp
python/tests/_manifest_driven/: test_cfd.py  test_contract_lookup.py  test_dataframe.py  test_docs_examples.py  test_graph.py  test_kernels.py  test_linalg.py  test_ml.py  test_public_naming.py  test_runtime_interop.py  test_sparse.py  test_test_vectors.py  test_type_stubs.py
python/tests/vectors/: basic_linalg.json
runtime/: CMakeLists.txt  README.md
runtime/include/: binning_memory_resource.h  gpu_library_ops.h  gpu_runtime.h  pool_memory_resource.h  program_cache.h  resource_adaptors.h  stream_pool.h
runtime/include/navatala/: batch.hpp  buffer.hpp  index.hpp  memory.hpp  metrics.hpp  navatala.hpp  navatala_ffi.h  queue.hpp  results.hpp
runtime/src/: backend_cuda.cpp  backend_hip.cpp  backend_metal.mm  backend_vulkan.cpp  binning_memory_resource.cpp  device_factory.cpp  device_mem_telemetry.cpp  device_mem_telemetry_internal.h  gpu_library_hip_blas.cpp  memory_resource.cpp  navatala_backend.cpp  navatala_buffer.cpp  navatala_ffi_real.cpp  navatala_index.cpp  navatala_memory.cpp  navatala_profiling.cpp  navatala_resource.cpp  pool_memory_resource.cpp  public_runtime_stubs.cpp
runtime/src/internal/: _registry.cpp  _registry_strings_cuda_cfd.cpp  _registry_strings_cuda_cfd_primitives.cpp  _registry_strings_cuda_cfd_vof.cpp  _registry_strings_cuda_collectives.cpp  _registry_strings_cuda_dataframe.cpp  _registry_strings_cuda_dataframe_top_k.cpp  _registry_strings_cuda_graph.cpp  _registry_strings_cuda_linalg.cpp  _registry_strings_cuda_ml.cpp  _registry_strings_cuda_ml_pointwise.cpp  _registry_strings_cuda_ml_reduction.cpp  _registry_strings_cuda_runtime.cpp  _registry_strings_cuda_sparse.cpp  _registry_strings_cuda_sparse_knn.cpp  _registry_strings_cuda_sparse_mg.cpp  _registry_strings_cuda_transformer.cpp  _registry_strings_cuda_vector_search.cpp  _registry_strings_cuda_vector_search_ivfpq.cpp  _registry_strings_hip_cfd.cpp  _registry_strings_hip_cfd_primitives.cpp  _registry_strings_hip_cfd_vof.cpp  _registry_strings_hip_dataframe_argsort.cpp  _registry_strings_hip_dataframe_top_k.cpp  _registry_strings_hip_graph.cpp  _registry_strings_hip_ml_pointwise.cpp  _registry_strings_hip_ml_reduction.cpp  _registry_strings_hip_nccl.cpp  _registry_strings_hip_sparse.cpp  _registry_strings_hip_sparse_knn.cpp  _registry_strings_hip_sparse_mg.cpp  _registry_strings_hip_transformer.cpp  _registry_strings_hip_vector_search.cpp  _registry_strings_hip_vector_search_ivfpq.cpp  _registry_strings_metal_cfd.cpp  _registry_strings_metal_cfd_primitives.cpp  _registry_strings_metal_cfd_vof.cpp  _registry_strings_metal_collectives.cpp  _registry_strings_metal_dataframe.cpp  _registry_strings_metal_dataframe_argsort.cpp  (+35 more)
runtime/tests/: CMakeLists.txt  test_device_buffer.cpp  test_device_selection.cpp  test_events.cpp  test_graphs.cpp  test_kernel_execution.cpp  test_memory_resources.cpp  test_program_cache.cpp  test_stream_pool.cpp
tests/: CMakeLists.txt  ffi_gemm_f16_f32_fallback_test.cpp  manifest_conformance.py
(+11868 files in other folders)
